crates/lemnos-macros/tests/ui/configured_spi_interface_mismatch.stderr
error: configured bus annotation must match the configured device interface
 --> tests/ui/configured_spi_interface_mismatch.rs:5:5
  |
5 |     bus: u32,
  |     ^^^
